{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 18,
  "lineage": "d6bf5554-95f4-f7d7-04ac-4bfbcbe94842",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-089552c3fccf5b89b",
            "domain": "vpc",
            "id": "eipalloc-003317a1f53b6328a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-066abcb277380655c",
            "private_dns": "ip-10-0-0-86.ap-south-1.compute.internal",
            "private_ip": "10.0.0.86",
            "public_dns": "ec2-65-0-160-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.160.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:internet-gateway/igw-0ac29659080d013b7",
            "id": "igw-0ac29659080d013b7",
            "owner_id": "581358179328",
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-igw"
            },
            "vpc_id": "vpc-00112485a40d145e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003317a1f53b6328a",
            "id": "nat-0d05056508e943bdf",
            "network_interface_id": "eni-066abcb277380655c",
            "private_ip": "10.0.0.86",
            "public_ip": "65.0.160.227",
            "subnet_id": "subnet-0d95c42ed1ace1f80",
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-natgw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.pub_net",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a1af65ac29783ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d05056508e943bdf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a1af65ac29783ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.pub_net",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac29659080d013b7",
            "id": "r-rtb-07d31569d84c171321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d31569d84c17132",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:route-table/rtb-03a1af65ac29783ca",
            "id": "rtb-03a1af65ac29783ca",
            "owner_id": "581358179328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d05056508e943bdf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-pvt-rt-table"
            },
            "vpc_id": "vpc-00112485a40d145e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:route-table/rtb-07d31569d84c17132",
            "id": "rtb-07d31569d84c17132",
            "owner_id": "581358179328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac29659080d013b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-pub-rt-table"
            },
            "vpc_id": "vpc-00112485a40d145e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ec6a75048ec9d57",
            "route_table_id": "rtb-03a1af65ac29783ca",
            "subnet_id": "subnet-0056566fdfc72a761"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.pvt_net",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d682f5004533c5",
            "route_table_id": "rtb-07d31569d84c17132",
            "subnet_id": "subnet-0d95c42ed1ace1f80"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.pub_net",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:security-group/sg-0abe16fd699000c39",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0abe16fd699000c39",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "124.123.183.221/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "DevOps-TF-default-sg",
            "name_prefix": "",
            "owner_id": "581358179328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00112485a40d145e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:subnet/subnet-0d95c42ed1ace1f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d95c42ed1ace1f80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581358179328",
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-pub-net"
            },
            "tags_all": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-pub-net"
            },
            "vpc_id": "vpc-00112485a40d145e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:subnet/subnet-0056566fdfc72a761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0056566fdfc72a761",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581358179328",
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-pvt-net"
            },
            "tags_all": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-pvt-net"
            },
            "vpc_id": "vpc-00112485a40d145e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:581358179328:vpc/vpc-00112485a40d145e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae129c302b848c58",
            "default_route_table_id": "rtb-06a89945419e09a2a",
            "default_security_group_id": "sg-0211213231113312b",
            "dhcp_options_id": "dopt-3d11ea56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00112485a40d145e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a89945419e09a2a",
            "owner_id": "581358179328",
            "tags": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-vpc"
            },
            "tags_all": {
              "Environment": "DevOps-TF",
              "Name": "DevOps-TF-vpc"
            }
          }
        }
      ]
    }
  ]
}